--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    
+    <!-- boostrap cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    
+    <!-- boostrap icons cdn -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script src='main.js'></script>
 </head>
 <body>
-    <Header></Header>
+    <header>
+        <span id="logo">
+            <i class="bi bi-box"></i>
+        </span>
+        <nav id="nav-links">
+            <ul id="links">
+                <li class="link">Home</li>
+                <li class="link">About</li>
+                <li class="link">Courses</li>
+                <li class="link">Contact</li>
+            </ul>
+        </nav>
+    </header>
     <nav></nav>
 </body>
 </html>
