Added more styling to header content

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
             </ul>
         </nav>
     </header>
+    <button id="side-nav-opener">></button>
     <nav>
-        
+
     </nav>
 </body>
 </html>
