Styled the side-nav button opener

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
             </ul>
         </nav>
     </header>
-    <button id="side-nav-opener"> ></button>
-    <nav>
-
+    <button id="side-nav-opener">></button>
+    <nav id="side-nav">
     </nav>
 </body>
 </html>
