--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <!-- boostrap icons cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <script src='main.js'></script>
+    <script defer src='script.js'></script>
 </head>
 <body>
     <header>
@@ -30,6 +30,15 @@
     </header>
     <button id="side-nav-opener">></button>
     <nav id="side-nav">
+        <ul id="side-links">
+            <li class="side-link">Hey</li>
+            <li class="side-link"></li>
+            <li class="side-link"></li>
+            <li class="side-link"></li>
+            <li class="side-link"></li>
+            <li class="side-link"></li>
+            <li class="side-link"></li>
+        </ul>
     </nav>
 </body>
 </html>
