Added side navigation content

--- a/index.html
+++ b/index.html
@@ -31,13 +31,38 @@
     <button id="side-nav-opener">></button>
     <nav id="side-nav">
         <ul id="side-links">
-            <li class="side-link">Hey</li>
-            <li class="side-link"></li>
-            <li class="side-link"></li>
-            <li class="side-link"></li>
-            <li class="side-link"></li>
-            <li class="side-link"></li>
-            <li class="side-link"></li>
+            <li class="side-link">
+                <span class="title">
+                    <i class="bi bi-images"></i>
+                    Gallary
+                </span>
+                            </li>
+            <li class="side-link">
+                <span class="title">
+                    <i class="bi bi-person-plus"></i>
+                    Accounts    
+                </span>
+            </li>
+            <li class="side-link">
+                <span class="title">
+                    <i class="bi bi-cash-stack"></i>
+                    Sponsers    
+                </span>
+            </li>
+            <li class="side-link">
+                <span class="title">
+                    <i class="bi bi-person-fill"></i>
+                    Admin
+                </span>
+                <button>Sign in</button>
+            </li>
+            <li class="side-link">
+                <span class="title">
+                    <i class="bi bi-person-circle"></i>
+                    Client    
+                </span>
+                <button>Sign in</button>
+            </li>
         </ul>
     </nav>
 </body>
