--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <header>
         <span id="logo">
             <i class="bi bi-box"></i>
+            <h1 id="logo-title">Coders</h1>
         </span>
         <nav id="nav-links">
             <ul id="links">
@@ -64,6 +65,7 @@
                 <button>Sign in</button>
             </li>
         </ul>
+        <button>Close</button>
     </nav>
 </body>
 </html>
