added close button for the side nav

--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
                     <i class="bi bi-person-circle"></i>
                     Client    
                 </span>
-                <button>Sign in</button>
+                
             </li>
         </ul>
-        <button>Close</button>
+        <button id="btnCloseSideNav">
+            <i class="bi bi-box-arrow-left"></i>
+        </button>
+        
     </nav>
 </body>
 </html>
