--- a/index.html
+++ b/index.html
@@ -47,44 +47,54 @@
     <button id="side-nav-opener">
         <i class="bi bi-arrow-bar-right"></i>
     </button>
-    <nav id="side-nav">
-        <ul id="side-links">
-            <li class="side-link">
-                <span class="title">
-                    <i class="bi bi-images"></i>
-                    Gallary
-                </span>
-            </li>
-            <li class="side-link">
-                <span class="title">
-                    <i class="bi bi-person-plus"></i>
-                    Accounts
-                </span>
-            </li>
-            <li class="side-link">
-                <span class="title">
-                    <i class="bi bi-cash-stack"></i>
-                    Sponsers
-                </span>
-            </li>
-            <li class="side-link">
-                <span class="title">
-                    <i class="bi bi-person-fill"></i>
-                    Admin
-                </span>
-            </li>
-            <li class="side-link">
-                <span class="title">
-                    <i class="bi bi-person-circle"></i>
-                    Client
-                </span>
-            </li>
-        </ul>
-        <button id="btnCloseSideNav">
-            <i class="bi bi-box-arrow-left"></i>
-        </button>
+    
+    <section id="hero">
+        <nav id="side-nav">
+            <ul id="side-links">
+                <li class="side-link">
+                    <span class="title">
+                        <i class="bi bi-images"></i>
+                        Gallary
+                    </span>
+                </li>
+                <li class="side-link">
+                    <span class="title">
+                        <i class="bi bi-person-plus"></i>
+                        Accounts
+                    </span>
+                </li>
+                <li class="side-link">
+                    <span class="title">
+                        <i class="bi bi-cash-stack"></i>
+                        Sponsers
+                    </span>
+                </li>
+                <li class="side-link">
+                    <span class="title">
+                        <i class="bi bi-person-fill"></i>
+                        Admin
+                    </span>
+                </li>
+                <li class="side-link">
+                    <span class="title">
+                        <i class="bi bi-person-circle"></i>
+                        Client
+                    </span>
+                </li>
+            </ul>
+            <button id="btnCloseSideNav">
+                <i class="bi bi-box-arrow-left"></i>
+            </button>
+        </nav>
 
-    </nav>
+        <section id="content">
+            <h1>Hello world</h1>
+        </section>
+    </section>
+    
+
+    <!-- coding the hero section -->
+   
 </body>
 
 </html>
